[gd_scene load_steps=14 format=3 uid="uid://cvwkhlljkg06j"]

[ext_resource type="Script" path="res://Enemies/Beetle.gd" id="1_mefon"]
[ext_resource type="PackedScene" uid="uid://cq4m2udfv5lfg" path="res://Enemies/Beetle/BeetleModel.tscn" id="2_qcu3o"]
[ext_resource type="AudioStream" uid="uid://c66nnoqtanfw2" path="res://Enemies/Sounds/robot_defeat.wav" id="3_w5eam"]
[ext_resource type="Script" path="res://addons/GD-Sync/Scripts/Types/PropertySynchronizer.gd" id="4_wat0v"]
[ext_resource type="Script" path="res://addons/GD-Sync/Scripts/Types/NodeInstantiator.gd" id="5_ybvcm"]
[ext_resource type="PackedScene" uid="uid://c54mpt43fs4wc" path="res://Player/Coin/Coin.tscn" id="6_ogrwu"]

[sub_resource type="Animation" id="Animation_5pcps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["!"]
}

[sub_resource type="Animation" id="Animation_6k5ul"]
resource_name = "found_player"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["!"]
}

[sub_resource type="Animation" id="Animation_iekf1"]
resource_name = "lost_player"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["?"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqtu2"]
_data = {
"RESET": SubResource("Animation_5pcps"),
"found_player": SubResource("Animation_6k5ul"),
"lost_player": SubResource("Animation_iekf1")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_h03f6"]
radius = 12.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g3iuo"]
radius = 0.489449

[sub_resource type="BoxShape3D" id="BoxShape3D_bm81s"]
size = Vector3(1.4, 0.2, 1.4)

[node name="GroundEnemy" type="RigidBody3D" groups=["damageables", "targeteables"]]
collision_layer = 3
collision_mask = 5
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
gravity_scale = 0.0
continuous_cd = true
lock_rotation = true
script = ExtResource("1_mefon")

[node name="ReactionLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.23854, 0)
visible = false
billboard = 2
text = "!"
font_size = 192
outline_size = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReactionLabel"]
libraries = {
"": SubResource("AnimationLibrary_sqtu2")
}

[node name="PlayerDetectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
shape = SubResource("SphereShape3D_h03f6")

[node name="CollisionShapeBody" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0858798, -0.189352)
shape = SubResource("CapsuleShape3D_g3iuo")

[node name="CollisionShapeHead" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.460848, -0.382635)
shape = SubResource("BoxShape3D_bm81s")

[node name="DeathCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.336327, -0.250324)
shape = SubResource("BoxShape3D_bm81s")
disabled = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.1

[node name="BeetleRoot" parent="." instance=ExtResource("2_qcu3o")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.426, 0)

[node name="DefeatSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_w5eam")
volume_db = 1.0

[node name="PropertySynchronizer" type="Node" parent="."]
script = ExtResource("4_wat0v")
process = 1
refresh_rate = 20
node_path = NodePath("..")
property_name = "position"
interpolated = true
interpolation_speed = 15.0

[node name="PropertySynchronizer2" type="Node" parent="."]
script = ExtResource("4_wat0v")
process = 1
refresh_rate = 20
node_path = NodePath("..")
property_name = "basis"
interpolated = true
interpolation_speed = 15.0

[node name="CoinInstantiator" type="Node" parent="."]
script = ExtResource("5_ybvcm")
spawn_type = 1
target_location = null
scene = ExtResource("6_ogrwu")
sync_starting_changes = true
